# WoW-Tracker-Discord-Bot

./: .gitignore  README.md  bot.py  main.py  pyproject.toml
.github/workflows/: tests.yml
src/: api_client.py  bot.py  commands.py  config.py  main.py
tests/: test_bot.py  test_client.py  test_command.py
